local/logs/project.log
2017-04-06T05:14:31.294Z - normal: Load ~/.CocosCreator/settings.json
2017-04-06T05:14:31.302Z - normal: checking language setting...
2017-04-06T05:14:31.302Z - normal: Language: zh
2017-04-06T05:14:33.304Z - success: protocol editor-framework registered
2017-04-06T05:14:33.305Z - success: protocol app registered
2017-04-06T05:14:33.305Z - success: protocol theme registered
2017-04-06T05:14:33.305Z - success: protocol profile registered
2017-04-06T05:14:33.305Z - success: protocol packages registered
2017-04-06T05:14:33.306Z - success: protocol unpack registerred
2017-04-06T05:14:33.306Z - success: protocol disable-commonjs registerred
2017-04-06T05:14:33.545Z - normal: connected!
2017-04-06T05:14:33.549Z - normal: Check project D:\workspace\web\work\games\prize-claw
2017-04-06T05:14:33.552Z - normal: Initializing Cocos2d
2017-04-06T05:14:33.895Z - normal: Initializing Asset Database
2017-04-06T05:14:33.962Z - success: protocol uuid registerred
2017-04-06T05:14:33.962Z - success: protocol db registerred
2017-04-06T05:14:33.962Z - success: protocol thumbnail registerred
2017-04-06T05:14:33.962Z - normal: Loading editor/builtin packages
2017-04-06T05:14:34.274Z - success: assets loaded
2017-04-06T05:14:34.278Z - success: builder loaded
2017-04-06T05:14:34.301Z - success: hierarchy loaded
2017-04-06T05:14:34.306Z - success: inspector loaded
2017-04-06T05:14:34.309Z - success: keystore loaded
2017-04-06T05:14:34.315Z - success: node-library loaded
2017-04-06T05:14:34.318Z - success: preferences loaded
2017-04-06T05:14:34.342Z - success: project-importer loaded
2017-04-06T05:14:34.345Z - success: project-settings loaded
2017-04-06T05:14:34.349Z - success: ui-kit loaded
2017-04-06T05:14:34.358Z - success: ui-grid loaded
2017-04-06T05:14:34.364Z - success: scene loaded
2017-04-06T05:14:34.370Z - success: sprite-editor loaded
2017-04-06T05:14:34.521Z - success: store loaded
2017-04-06T05:14:34.529Z - success: timeline loaded
2017-04-06T05:14:34.529Z - normal: Loading builtin packages
2017-04-06T05:14:34.539Z - success: anysdk loaded
2017-04-06T05:14:34.547Z - success: asset-db-debugger loaded
2017-04-06T05:14:34.550Z - success: code-editor loaded
2017-04-06T05:14:34.551Z - success: color-picker loaded
2017-04-06T05:14:34.556Z - success: console loaded
2017-04-06T05:14:34.559Z - success: package-manager loaded
2017-04-06T05:14:34.564Z - success: tester loaded
2017-04-06T05:14:34.566Z - success: ui-kit-preview-extra loaded
2017-04-06T05:14:34.568Z - success: ui-kit-preview loaded
2017-04-06T05:14:34.572Z - success: ui-tree loaded
2017-04-06T05:14:34.650Z - normal: Initializing project D:\workspace\web\work\games\prize-claw
2017-04-06T05:14:34.654Z - normal: Loading packages
2017-04-06T05:14:34.660Z - normal: Watching packages
2017-04-06T05:14:34.680Z - normal: Run Application
2017-04-06T05:14:37.861Z - success: preview server running at http://localhost:7456
2017-04-06T05:14:42.821Z - normal: 1.4.2
2017-04-06T05:18:02.258Z - normal: Compiled project javascript file successfully
2017-04-06T05:20:14.512Z - normal: Compiled project javascript file successfully
2017-04-06T05:21:01.027Z - normal: Compiled project javascript file successfully
2017-04-06T05:21:22.097Z - normal: Compiled project javascript file successfully
2017-04-06T06:42:51.095Z - failed: [db-task][sync-changes] Failed to import asset D:\workspace\web\work\games\prize-claw\assets\js\game.js, message: Compile error: SyntaxError: unknown: Unexpected token, expected , (169:12)
  167 |                 }
  168 | 
> 169 |             }
      |             ^
  170 |         })
  171 |     },
  172 | 
    at Parser.pp$5.raise (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:4373:13)
    at Parser.pp.unexpected (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:1716:8)
    at Parser.pp.expect (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:1704:33)
    at Parser.pp$3.parseCallExpressionArguments (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:3497:12)
    at Parser.pp$3.parseSubscripts (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:3466:31)
    at Parser.pp$3.parseExprSubscripts (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:3437:15)
    at Parser.pp$3.parseMaybeUnary (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:3407:19)
    at Parser.pp$3.parseExprOps (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:3337:19)
    at Parser.pp$3.parseMaybeConditional (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:3314:19)
    at Parser.pp$3.parseMaybeAssign (D:\software\cocos\resources\app.asar\node_modules\babylon\lib\index.js:3277:19)
2017-04-06T06:43:40.363Z - normal: Compiled project javascript file successfully
2017-04-06T06:52:16.333Z - normal: Compiled project javascript file successfully
